// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatusChip snapshots renders away variant correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-yellow-500/20 text-yellow-400 border border-yellow-500/30"
>
  Away
</span>
`;

exports[`StatusChip snapshots renders default variant correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-cyan-500/20 text-cyan-400 border border-cyan-500/30"
>
  Default
</span>
`;

exports[`StatusChip snapshots renders dtfn variant correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-orange-500/20 text-orange-400 border border-orange-500/30"
>
  Ready Now
</span>
`;

exports[`StatusChip snapshots renders medium size correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-3 py-1 text-sm bg-cyan-500/20 text-cyan-400 border border-cyan-500/30"
>
  Medium
</span>
`;

exports[`StatusChip snapshots renders offline variant correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-gray-500/20 text-gray-400 border border-gray-500/30"
>
  Offline
</span>
`;

exports[`StatusChip snapshots renders online variant correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-green-500/20 text-green-400 border border-green-500/30"
>
  Online
</span>
`;

exports[`StatusChip snapshots renders party variant correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-pink-500/20 text-pink-400 border border-pink-500/30"
>
  Party
</span>
`;

exports[`StatusChip snapshots renders self variant correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-purple-500/20 text-purple-400 border border-purple-500/30"
>
  You
</span>
`;

exports[`StatusChip snapshots renders tag variant correctly 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
>
  Tech
</span>
`;
